降级到 JDK 8 兼容
- pom.xml: java.version 17→1.8, compiler source/target 17→1.8
- ProductServiceImpl: isBlank()→trim().isEmpty() (Java 11+ only)
- mvnw: 移除硬编码 JDK 17 路径, 使用系统默认 Java